# catkin_workspace_for_vscode_ros_extension

./: .gitignore
.catkin_tools/profiles/default/: config.yaml
.devcontainer/: Dockerfile  devcontainer.json
src/foo/: CMakeLists.txt  package.xml
src/foo/include/foo/: foo_application.hpp
src/foo/launch/: foo.launch
src/foo/src/: foo_application.cpp  foo_node.cpp
src/foo/test/: foo_application_test.cpp  foo_application_test.test  foo_test.cpp  foo_test.test
