<?xml version="1.0"?>
<package format="2">
  <name>foo</name>
  <version>1.3.2</version>
  <description>
    TODO
  </description>
  <maintainer email="todo@example.com">Example</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>

</package>
